fix: navbar spacing

--- a/styles/components/_navbar.scss
+++ b/styles/components/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar {
   position: fixed;
   z-index: 1;
+  height: 80px;
   width: 100%;
   transition: all 400ms ease;
 
